mysql/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysql
  labels:
    app.kubernetes.io/name: mysql
    app.kubernetes.io/instance: mysql
