mysql/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: mysql
  labels:
    app: mysql
    version: "5.7"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mysql
      version: "5.7"
  template:
    metadata:
      labels:
        app: mysql
        version: "5.7"
    spec:
      containers:
        - name: mysql
          image: mysql:5.7
          livenessProbe:
            tcpSocket:
              port: 3306
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 2
            timeoutSeconds: 3
          ports:
            - containerPort: 3306
          resources:
            limits:
              cpu: 2000m
              memory: 4Gi
            requests:
              cpu: 300m
              memory: 400Mi
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: mysql-config
              mountPath: /etc/mysql/conf.d 
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-config
        configMap:
          name: mysql-config
