mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mysql
  name: mysql-svc
  labels:
    app: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
    tier: mysql
  clusterIP: None
